2006-03-22  Harry Lu  <harry.lu@sun.com>

	Fix for 333697
	* gui/dialogs/task-page.c: (task_page_init), (sensitize_widgets):
	remove two useless widgets: sendoptions_frame and sendoptions_button.

2006-03-22  Harry Lu  <harry.lu@sun.com>

	Fix for 333706

	* gui/dialogs/alarm-dialog.c: (alarm_to_dalarm_widgets): call
	set_text only when description.value is not NULL.

2006-03-09  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #334003
	* gui/e-cal-model.c: 
	(e_cal_model_set_instance_times): Use the timezone present in
	the appointment.

2006-03-06  Veerapuram Varadhan  <vvaradhan@novell.com>

	**Fixes #321832
	* gui/dialogs/event-editor.c: Pickup the right-icon for f/b.
	* gui/dialgos/Makefile.am: Define EVOLUTION_ICONSDIR to pickup f/b icon.
	
2006-03-06  Simon Zheng  <simon.zheng@sun.com>

	Fixes bug #332140
	* gui/dialogs/comp-editor.c: (get_attachment_list):
	* gui/e-cal-popup.c: (temp_save_part):
	Transfer filenames from utf-8 to glib encoding before really
	saving files.

2006-03-06  Simon Zheng  <simon.zheng@sun.com>

	Fixes #311482
	* gui/dialogs/comp-editor.c: (set_attachment_list): As uri is 
	encaped ASCII-encoded, it can't be recognized when setting 
	mime part. Use filename instead of uri.

2006-03-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	** Fixes bug #328988
	
	* gui/alarm-notify/util.c: (calculate_time):
	* gui/misc.c: (calculate_time): Added code to simplify the function
	calculate_time and made strings translatable.

2006-03-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #330448
	* gui/e-meeting-list-view.c: (attendee_edited_cb): Remove
	attendees from the e-name-selector when its removed from
	meeting list view.

2006-03-06  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #329353	
	* gui/gnome-cal.c:
	(gnome_calendar_on_date_navigator_selection_changed): If the previous
	selection is not list view, set the view as month view.

2006-03-04  Jeff Cai <jeff.cai@sun.com>

	Fixes #333234