@@ -1,3 +1,10 @@
+2006-03-22  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	Fixes #330842
+	* gui/e-cal-model.c: 
+	(e_cal_view_objects_added_cb): Check if the icalcomp
+	is set to ECalComponent.
+
 2006-03-22  Harry Lu  <harry.lu@sun.com>
 
 	Fix for 333697
